# node-sec

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  docker-compose.yml  genesis.tasks.json
.claude/skills/code-review/: README.md  SKILL.md  index.json
.claude/skills/code-review/checklists/: architecture.md  concurrency-and-data-integrity.md  finops.md  improvements.md  injection-deep.md  javascript-typescript.md  llm-slop.md  migrations-and-compat.md  performance.md  privacy-and-data-flow.md  python.md  removed-defenses.md  resilience.md  security-general.md  sql-and-data.md  supply-chain.md  taint-spine.md  test-quality.md
.claude/skills/code-review/evals/: README.md  build_fixtures.py  check_structure.py  expected.json  run_evals.sh  score.py
.claude/skills/code-review/modes/: full-project.md  pr-review.md  uncommitted.md
.claude/skills/code-review/references/: invariants.md  report-template.md  review-discipline.md  severity-rubric.md
.claude/skills/code-review/scripts/: build_index.py  calibration.py  change_risk.py  check_cves.py  check_cves.sh  check_report.py  poc_runner.sh  preflight.sh  record_outcome.py  run_static_analysis.sh  verify_findings.py
.claude/skills/code-review/subagents/: finding-verifier.md
.claude/skills/design-creator/: SKILL.md  index.json
.claude/skills/design-creator/bootstrap/: adopt.md  scaffold.md
.claude/skills/design-creator/evals/: README.md  diversity.mjs  golden-briefs.json  motion.mjs  rubric.md
.claude/skills/design-creator/patterns/: auth.md  cta.md  dashboard.md  faq.md  features.md  footer.md  hero.md  navbar.md  pricing.md  profile.md  testimonials.md
.claude/skills/design-creator/principles/: .reviewed.json  3d.md  accessibility.md  aesthetic-families.md  ambition.md  anti-slop.md  color.md  composition.md  concept.md  cursor.md  data-viz.md  decorative-graphics.md  depth.md  design-qa.md  diversity.md  forms.md  frontend-gotchas.md  frontend-safety.md  governance.md  icon-morphing.md  interaction-detail.md  invariants.md  kinetic-type.md  layout.md  memory.md  micro-mechanics.md  modes.md  motion.md  optical.md  optimization.md  page-architecture.md  perf-budget.md  photography.md  reference-scout.md  responsive.md  screen-states.md  seo.md  signature.md  skeletons.md  storytelling.md  (+3 more)
.claude/skills/design-creator/references/: README.md  clean-exemplar.md  inspiration.md  statement-exemplar.md
.claude/skills/design-creator/tools/: USAGE.md  ambition-check.md  calibration.mjs  contrast.mjs  critic.md  drift.mjs  handoff.md  package-lock.json  package.json  preflight.mjs  spread.mjs  taste.mjs  tournament.mjs  verify.md  verify.mjs
.claude/skills/genesis/: SKILL.md  index.json
.claude/skills/genesis/evals/: README.md  parametric_test.py  seam_test.py
.claude/skills/genesis/modes/: adopt.md  greenfield.md  replan.md
.claude/skills/genesis/references/: agent-wrappers.md  ci-emit.md  (+8 more)
.claude/skills/prompt-refiner/: SKILL.md  index.json
.design/: analyst-dashboard.html  journal.md  tokens.json
.github/workflows/: ci.yml  spec-gate.yml
.template/: INSTRUCTIONS.en.md  INSTRUCTIONS.ru.md  OVERVIEW.en.md  OVERVIEW.ru.md  README.md
config/aml/: default.json
config/rules/: default.json
config/sar/: default.json
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs
crates/api/src/analyst/: mod.rs
crates/api/src/sim/: mod.rs
crates/api/tests/: e2e.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: audit.rs  lib.rs
crates/compliance/src/aml/: mod.rs
crates/compliance/src/cases/: mod.rs
crates/compliance/src/feedback/: mod.rs
crates/compliance/src/pipeline/: mod.rs
crates/compliance/src/sar/: mod.rs
crates/compliance/src/screening/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: decision.rs  ids.rs  lib.rs  money.rs  transaction.rs
crates/engine/: Cargo.toml  build.rs
crates/engine/benches/: latency.rs  load_sla.rs
crates/engine/src/: decide.rs  lib.rs
crates/engine/src/api/: mod.rs
crates/engine/src/decision/: mod.rs
crates/engine/src/degrade/: mod.rs
crates/features/: Cargo.toml
crates/features/src/: derive.rs  lib.rs  offline.rs  online.rs
crates/features/src/graph/: mod.rs
crates/graph/: Cargo.toml
crates/graph/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/model/: Cargo.toml
crates/model/src/: explain.rs  inference.rs  lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: config.rs  engine.rs  lib.rs  velocity.rs
crates/simulator/: Cargo.toml
crates/simulator/src/: generator.rs  lib.rs  population.rs  rng.rs  sink.rs
crates/stream/: Cargo.toml
crates/stream/src/: aggregator.rs  lib.rs  store.rs  window.rs
crates/verticals/crypto/: Cargo.toml
crates/verticals/p2p/: Cargo.toml
deploy/: README.md  engine.toml  prometheus.yml
design/: analyst-brief.md  sim-brief.md
docs/: architecture.md  decisions.md  glossary.md  open-questions.md
migrations/: 0001_audit_log.sql
ml/: README.md  pyproject.toml
ml/artifacts/: fraud_lgbm.onnx  parity.json
ml/eval/: metrics.py
ml/explain/: reasons.py
ml/export/: to_onnx.py
ml/features/: windows.py
ml/feedback/: dataset.py  reject_inference.py
ml/graph/er/: resolve.py
ml/graph/features/: compute.py
ml/graph/motifs/: detect.py
ml/labels/: join.py
ml/registry/: psi.py
ml/tests/: test_er.py  test_eval.py  test_explain.py  test_export.py  test_feedback.py  test_graph_features.py  test_labels.py  test_motifs.py  test_parity.py  test_registry.py  test_smoke.py  test_train.py
ml/tests/fixtures/: parity_case.json
ml/training/: synthetic.py  train.py
project-context/: summary.md
proto/: decision.proto
scripts/: chaos.sh  healthcheck.sh  integration-test.sh
tools/: INTER-SKILL-CONTRACT.md  contract.json  drift-check.py  port-skills.py  run-evals.sh
tools/project-map/: CONTRACT.md  build.py
web/: next.config.mjs  package-lock.json  package.json
web/app/: AnalystDashboard.jsx  globals.css  layout.jsx  page.jsx  ui.jsx
web/app/sim/: SimDashboard.jsx  page.jsx
web/lib/: data.js  sim.js
(+125 files in other folders)
