# node-sec — Rust workspace.
# Hot path + async update path live here; the Python ML/graph tree is under ml/ (separate toolchain).
# Vertical packs (verticals-p2p, verticals-crypto) and the dashboard api crate are added by their
# own backlog tasks (S5/S6); the core crates below must never depend on a vertical pack
# (arch:vertical-agnostic-core).
[workspace]
resolver = "2"
members = [
    "crates/domain",
    "crates/engine",
    "crates/ingest",
    "crates/stream",
    "crates/features",
    "crates/rules",
    "crates/model",
    "crates/graph",
    "crates/compliance",
    "crates/simulator",
    "crates/api",
    "crates/verticals/p2p",
    "crates/verticals/crypto",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.90"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-stream = "0.1"
axum = "0.7"
tonic = "0.12"
prost = "0.13"
arc-swap = "1"
dashmap = "6"
tempfile = "3"
petgraph = "0.6"
strsim = "0.11"

[workspace.lints.clippy]
# Match CI: clippy runs with -D warnings. Keep the workspace warning-clean from the start.
all = "warn"

[profile.release]
# Money/amount math must never wrap silently in a financial system — a loud panic (caught off the
# hot path) beats a corrupted amount. The hot path itself uses checked_* money arithmetic.
overflow-checks = true
lto = "thin"
codegen-units = 1
