[project]
name = "nodesec-ml"
version = "0.1.0"
description = "node-sec ML: model training, evaluation, and batch graph analytics."
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scikit-learn>=1.5",
    "lightgbm>=4.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0",
]

# Not an installable package — just a dependency/dev environment for the ml/ scripts and tests.
[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
