[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
compliance = { path = "../compliance" }
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "analyst-api"
path = "src/main.rs"
