[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
compliance = { path = "../compliance" }
engine = { path = "../engine" }
rules = { path = "../rules" }
axum = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
time = { workspace = true }

[[bin]]
name = "analyst-api"
path = "src/main.rs"
