[package]
name = "compliance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
postgres = { version = "0.19", features = ["with-serde_json-1"] }
strsim = { workspace = true }
time = { workspace = true }
