[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
rules = { path = "../rules" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
time = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
