[package]
name = "engine"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
rules = { path = "../rules" }
features = { path = "../features" }
stream = { path = "../stream" }
tokio = { workspace = true, features = ["time"] }
tonic = { workspace = true }
prost = { workspace = true }
time = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "load_sla"
harness = false
