[package]
name = "features"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
stream = { path = "../stream" }
tokio = { workspace = true, features = ["time"] }
time = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
