[package]
name = "rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
domain = { path = "../domain" }
serde = { workspace = true }
serde_json = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
